--- a/rcAdmin/ForwardingInvoice/Edit.cshtml
+++ b/rcAdmin/ForwardingInvoice/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    Page.Title = "Edit Forwarding Invoice";
     //fileManager
     Response.Cookies[Session.SessionID].Value = "True";
     Response.Cookies[Session.SessionID].Expires = DateTime.Now.AddHours(3);
@@ -265,7 +266,7 @@
         <fieldset>
             <div class="widget">
                 <div class="whead">
-                    <h6>Create new Forwarding Invoice | <a href="~/rcAdmin/ForwardingInvoice">All Forwarding Invoice</a> </h6>
+                    <h6>Edit Forwarding Invoice | <a href="~/rcAdmin/ForwardingInvoice">All Forwarding Invoice</a> </h6>
                     <div class="clear"></div>
                 </div>
                 <div class="formRow">
@@ -355,7 +356,7 @@
         <fieldset>
             <div class="widget">
                 <div class="whead">
-                    <h6>Create new Forwarding Invoice | <a href="~/rcAdmin/ForwardingInvoice">All Forwarding Invoice</a> </h6>
+                    <h6>Edit Forwarding Invoice | <a href="~/rcAdmin/ForwardingInvoice">All Forwarding Invoice</a> </h6>
                     <div class="clear"></div>
                 </div>
                 <div class="formRow">
